added methods for spk parsing

--- a/app/client/head.html
+++ b/app/client/head.html
@@ -23,3 +23,5 @@
   <meta name="msapplication-config" content="/favicons/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 </head>
+
+<body data-rinse-window="yeast"></body>
