changed to lookback:tooltips across the board.  fixes #99

--- a/app/packages/meteor-tooltips/tooltips.html
+++ b/app/packages/meteor-tooltips/tooltips.html
@@ -2,6 +2,7 @@
 	<div class="tooltip {{direction}} {{display}}" style="{{position}}">
 		{{#if content}}
 			<div class="inner">{{{content}}}</div>
+			<div class="arrow"></div>
 		{{/if}}
 	</div>
 </template>
