added significantly more validation/feedback

--- a/app/packages/meteor-tooltips/tooltips.html
+++ b/app/packages/meteor-tooltips/tooltips.html
@@ -1,10 +1,10 @@
 <template name="tooltips">
-	<div class="tooltip {{direction}} {{display}}" style="{{position}}">
-		{{#if content}}
+	{{#if content}}
+	<div class="tooltip {{direction}} {{display}} {{#each classes}}{{this}} {{/each}}" style="{{position}}">
 			<div class="inner">{{{content}}}</div>
 			<div class="arrow"></div>
-		{{/if}}
 	</div>
+	{{/if}}
 </template>
 
 <template name="tooltip">
