--- a/app/client/head.html
+++ b/app/client/head.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8">
-  <title>Sandstorm App Store</title>
-  <meta name="description" content="sandstorm-appstore">
+  <title>Sandstorm App Market</title>
+  <meta name="description" content="Apps for Sandstorm.io">
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1">
   <link rel="apple-touch-icon" sizes="57x57" href="/favicons/apple-touch-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/favicons/apple-touch-icon-60x60.png">
