Add pageview tracking

--- a/app/client/head.html
+++ b/app/client/head.html
@@ -22,4 +22,5 @@
   <meta name="msapplication-TileImage" content="/favicons/mstile-144x144.png">
   <meta name="msapplication-config" content="/favicons/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
+  <script type="text/javascript" src="https://sandstorm.io/stats.js" async></script>
 </head>
